--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,29 @@
 	<groupId>io.github.oliviercailloux</groupId>
 	<artifactId>xmcda-2.2.1-jaxb</artifactId>
 	<version>0.0.1</version>
+	<name>${project.groupId}:${project.artifactId}</name>
+	<description>Java source for (un)marshalling XMCDA-2.2.1 files, JAXB-generated from the schema.</description>
+	<url>https://github.com/oliviercailloux/XMCDA-2.2.1-JAXB</url>
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>https://opensource.org/licenses/MIT</url>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<name>Olivier Cailloux</name>
+			<email>olivier.cailloux@dauphine.fr</email>
+			<url>http://www.lamsade.dauphine.fr/~ocailloux/</url>
+			<organization>Paris-Dauphine</organization>
+			<organizationUrl>http://www.dauphine.fr</organizationUrl>
+		</developer>
+	</developers>
+	<scm>
+		<connection>scm:git:git://github.com/oliviercailloux/XMCDA-2.2.1-JAXB.git</connection>
+		<developerConnection>scm:git:ssh://github.com/oliviercailloux/XMCDA-2.2.1-JAXB.git</developerConnection>
+		<url>http://github.com/oliviercailloux/XMCDA-2.2.1-JAXB/tree/master</url>
+	</scm>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
